# behavioral_model_testing_demo

./: README.md  hello.py  main.py  pyproject.toml  test_directional.py  test_invariance.py  test_minimum_functionality.py
src/: __init__.py  main.py  utilities.py
tests/: __init__.py  test_directional.py  test_invariance.py  test_minimum_functionality.py  test_utilities.py
