[project]
name = "behavioral-model-testing-with-hf"
version = "0.1.0"
description = "Behavioral testing for sentiment analysis models using Hugging Face"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "utility: marks tests for utility functions (deselect with '-m \"not utility\"')",
]
